--- a/src/components/EHR/style.css
+++ b/src/components/EHR/style.css
@@ -6,7 +6,7 @@
     height: 100vh;
     color:rgba(0, 0, 0, 0.5);
     text-shadow: 0 1px 0 rgba(255, 255, 255, 0.75);
-    background-image: linear-gradient(
+    /* background-image: linear-gradient(
         135deg,
         #CACCCC8F 25%,
         #11000019 25%,
@@ -16,7 +16,7 @@
         #11000019 75%,
         #11000019 100%
     );
-    background-size: 11.31px 11.31px;
+    background-size: 11.31px 11.31px; */
 }
 
 .ehr .alert {
@@ -36,7 +36,7 @@
 }
 
 .ehr-header {
-    background: linear-gradient(#F9F9F9CC, #FFFFFF00);
+    /* background: linear-gradient(#F9F9F9CC, #FFFFFF00); */
     padding: 0 2.5em;
 }
 
